crates/parser/tests/cases/snapshots/cases__errors__array_old_syntax.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(array_old_syntax), functions::parse_stmt,\n    \"let x: u8[10]\")"

---
error: Outdated array syntax
  ┌─ array_old_syntax:1:8
  │
1 │ let x: u8[10]
  │        ^^^^^^
  │
  = Hint: Use `Array<u8, 10>`


